<resources>
    <string name="app_name">StandaloneApp1</string>
    <string name="first_name">First Name: </string>
    <string name="middle_name">Middle Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="submit_button">Submit</string>
    <string name="profile_pic">Profile Picture: </string>
    <string name="take_pic">Take a Picture</string>
    <string name="loggedIn_Success">has successfully logged in!</string>
</resources>